# viva-genicam

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  REVIEW.md  deny.toml  roadmap.md
.github/workflows/: audit.yml  ci.yml  publish-crates.yml  publish-docs.yml  python.yml  release.yml
book/: book.toml
book/src/: SUMMARY.md  api.md  architecture.md  contributing.md  errors-logging.md  faq.md  glossary.md  index.md  license.md  networking.md  primer.md  python.md  quick-start.md  testing.md  welcome.md
book/src/crates/: README.md  genapi-core.md  genicp.md  tl-gige.md
book/src/python/: api.md  control.md  discovery.md  install.md  streaming.md
book/src/tutorials/: README.md  discovery.md  discovery_back.md  fake-camera.md  genapi-xml.md  registers.md  streaming.md
crates/genapi-core/src/: io.rs  lib.rs  nodemap.rs  nodes.rs  swissknife.rs
crates/genapi-xml/: Cargo.toml
crates/genapi-xml/src/: builders.rs  fetch.rs  lib.rs  util.rs
crates/genapi-xml/src/parsers/: control.rs  mod.rs  numeric.rs  swissknife.rs  symbolic.rs
crates/gencamctl/src/: cmd_bench.rs  cmd_stream.rs
crates/genicam/: Cargo.toml
crates/genicam-service/: Cargo.toml
crates/genicam-service/src/: acquisition.rs  config.rs  device.rs  discovery.rs  main.rs  nodes.rs  pixel_format.rs  status.rs  xml.rs
crates/genicam-service/tests/: fake_camera_e2e.rs
crates/genicam/examples/: bitfields_demo.rs  grab_gige.rs  grab_with_chunks.rs  multicast_grab.rs  paddress_demo.rs  selectors_demo.rs  soak_bench.rs
crates/genicam/src/: lib.rs  stream.rs  time.rs
crates/genicam/tests/: fake_camera.rs
crates/genicam/tests/common/: mod.rs
crates/genicp/src/: lib.rs
crates/tl-gige/: Cargo.toml
crates/tl-gige/src/: gvcp.rs  gvsp.rs  lib.rs  nic.rs
crates/viva-camctl/: Cargo.toml  README.md
crates/viva-camctl/src/: cmd_bench.rs  cmd_chunks.rs  cmd_events.rs  cmd_get.rs  cmd_list.rs  cmd_set.rs  cmd_set_ip.rs  cmd_stream.rs  cmd_usb.rs  common.rs  lib.rs  main.rs
crates/viva-fake-gige/: Cargo.toml  README.md
crates/viva-fake-gige/src/: gvcp_server.rs  gvsp_sender.rs  lib.rs  main.rs  registers.rs
crates/viva-fake-u3v/: Cargo.toml  README.md
crates/viva-fake-u3v/src/: lib.rs  registers.rs  transport.rs
crates/viva-genapi/: Cargo.toml  README.md
crates/viva-genapi-xml/: Cargo.toml  README.md
crates/viva-genapi-xml/src/: builders.rs  fetch.rs  lib.rs  util.rs
crates/viva-genapi-xml/src/parsers/: control.rs  converter.rs  mod.rs  numeric.rs  struct_reg.rs  swissknife.rs  symbolic.rs
crates/viva-genapi/src/: bitops.rs  conversions.rs  error.rs  io.rs  lib.rs  nodemap.rs  nodes.rs
crates/viva-gencp/: Cargo.toml  README.md
crates/viva-gencp/src/: lib.rs
crates/viva-genicam/: Cargo.toml  README.md
crates/viva-genicam/examples/: action_trigger.rs  bitfields_demo.rs  demo_fake_camera.rs  enum_pvalue_demo.rs  events_gige.rs  features_demo.rs  get_set_feature.rs  grab_gige.rs  grab_with_chunks.rs  list_cameras.rs  multicast_grab.rs  paddress_demo.rs  selectors_demo.rs  soak_bench.rs  stats.rs  swissknife_demo.rs  time_sync.rs
crates/viva-genicam/src/: chunks.rs  events.rs  frame.rs  lib.rs  stream.rs  time.rs
crates/viva-genicam/tests/: fake_camera.rs  fake_u3v_camera.rs  predicates.rs
crates/viva-genicam/tests/common/: mod.rs
crates/viva-gige/: Cargo.toml  README.md
crates/viva-gige/src/: action.rs  gvcp.rs  gvsp.rs  lib.rs  message.rs  nic.rs  stats.rs  time.rs
crates/viva-pfnc/: Cargo.toml  README.md
crates/viva-pfnc/src/: lib.rs
crates/viva-pygenicam/: Cargo.toml  README.md  pyproject.toml
crates/viva-pygenicam/examples/: README.md  demo_fake_camera.py  discover.py  get_set_feature.py  grab_frame.py  node_browser.py
crates/viva-pygenicam/python/viva_genicam/: __init__.py  _native.pyi  camera.py  discovery.py  errors.py  frame.py  node.py  stream.py  testing.py
crates/viva-pygenicam/src/: camera.rs  discovery.rs  errors.rs  frame.rs  lib.rs  nodemap.rs  runtime.rs  stream.rs  testing.rs
crates/viva-pygenicam/tests/: conftest.py  test_api_shape.py  test_discovery.py  test_features.py  test_streaming.py  test_testing.py
crates/viva-service/: Cargo.toml  README.md
crates/viva-service-u3v/: Cargo.toml  README.md
crates/viva-service-u3v/src/: acquisition.rs  device.rs  main.rs
crates/viva-service/src/: acquisition.rs  config.rs  device.rs  lib.rs  main.rs  nodes.rs  pixel_format.rs  status.rs  xml.rs
crates/viva-service/tests/: fake_camera_e2e.rs
crates/viva-sfnc/: Cargo.toml  README.md
crates/viva-sfnc/src/: lib.rs
crates/viva-u3v/: Cargo.toml  README.md
crates/viva-u3v/src/: bootstrap.rs  control.rs  descriptor.rs  device.rs  discovery.rs  lib.rs  stream.rs  usb.rs
crates/viva-zenoh-api/: Cargo.toml  README.md
crates/viva-zenoh-api/src/: frame_header.rs  lib.rs
doc/: 2026-04-12-genapi-introspection-predicates.md  2026-04-12-genapi-numeric-type-dispatch.md  genicam.md  roadmap.md
doc/adrs/: 010-feature-state-contract.md
