[workspace]
members = [
  "crates/viva-gencp",
  "crates/viva-genapi-xml",
  "crates/viva-genapi",
  "crates/viva-gige",
  "crates/viva-u3v",
  "crates/viva-pfnc",
  "crates/viva-sfnc",
  "crates/viva-genicam",
  "crates/viva-camctl",
  "crates/viva-zenoh-api",
  "crates/viva-service",
  "crates/viva-fake-gige",
  # "crates/gentl-cti",
]
exclude = [
  "crates/gentl-cti",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/VitalyVorobyev/genicam-rs"
rust-version = "1.75"

[workspace.metadata]
homepage = "https://github.com/VitalyVorobyev/genicam-rs"

[workspace.dependencies]
thiserror = "1"
bytes = "1"
bitflags = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync"] }
quick-xml = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# For USB later:
rusb = "0.9"
# For net utils:
if-addrs = "0.11"
async-trait = "0.1"
socket2 = "0.5"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
time = "0.3"
