[workspace]
members = [
  "crates/viva-gencp",
  "crates/viva-genapi-xml",
  "crates/viva-genapi",
  "crates/viva-gige",
  "crates/viva-u3v",
  "crates/viva-pfnc",
  "crates/viva-sfnc",
  "crates/viva-genicam",
  "crates/viva-camctl",
  "crates/viva-zenoh-api",
  "crates/viva-service",
  "crates/viva-fake-gige",
  "crates/viva-fake-u3v",
  "crates/viva-service-u3v",
]
resolver = "3"

[workspace.package]
version = "0.2.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/VitalyVorobyev/viva-genicam"
homepage = "https://github.com/VitalyVorobyev/viva-genicam"
rust-version = "1.88"
keywords = ["genicam", "vision", "gige", "camera"]
categories = ["hardware-support", "network-programming", "science::robotics"]

[workspace.dependencies]
thiserror = "1"
bytes = "1"
bitflags = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync"] }
quick-xml = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusb = "0.9"
# For net utils:
if-addrs = "0.11"
async-trait = "0.1"
socket2 = "0.5"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
time = "0.3"
