[package]
name = "genicam"
version = "0.1.0"
edition = "2021"
description = "High level GenICam facade re-exporting transports, GenApi, and SFNC"
license = "MIT"
repository = "https://github.com/VitalyVorobyev/genicam-rs"
readme = "README.md"
keywords = ["genicam", "vision", "gige", "camera"]
categories = ["hardware-support", "network-programming", "science::robotics"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
genapi-core = { version = "0.1.0", path = "../genapi-core" }
genapi-xml = { version = "0.1.0", path = "../genapi-xml" }
thiserror = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync", "time"] }
tracing = { workspace = true }
tl-gige = { version = "0.1.0", path = "../tl-gige" }
async-trait = { workspace = true }
sfnc = { version = "0.1.0", path = "../sfnc" }
pfnc = { version = "0.1.0", path = "../pfnc" }
genicp = { version = "0.1.0", path = "../genicp" }
gvsp-capture = { path = "../../../gvsp-capture/crates/gvsp-capture", optional = true }

[features]
fast-capture = ["dep:gvsp-capture"]

[dev-dependencies]
genapi-xml = { version = "0.1.0", path = "../genapi-xml" }
fastrand = "2"
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Enable Tokio's signal support for examples like `soak_bench`.
tokio = { workspace = true, features = ["signal"] }
