[package]
name = "viva-camctl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CLI tool for GenICam camera discovery, feature control, and streaming"
publish = false

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["macros", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
time = { workspace = true, features = ["formatting"] }

viva-genicam = { version = "0.2.0", path = "../viva-genicam", features = ["u3v-usb"] }
viva-gige = { version = "0.2.0", path = "../viva-gige" }
viva-sfnc = { version = "0.2.0", path = "../viva-sfnc" }
viva-pfnc = { version = "0.2.0", path = "../viva-pfnc" }
viva-genapi-xml = { version = "0.2.0", path = "../viva-genapi-xml" }
viva-u3v = { version = "0.2.0", path = "../viva-u3v", features = ["usb"] }
