[package]
name = "viva-fake-gige"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "In-process fake GigE Vision camera for testing and demos"
publish = false

[[bin]]
name = "viva-fake-gige"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "net", "time", "sync", "macros", "signal"] }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
socket2 = { workspace = true, features = ["all"] }
clap = { workspace = true }
