[package]
name = "viva-fake-u3v"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
bytes = { workspace = true }
viva-u3v = { version = "0.2.0", path = "../viva-u3v" }
viva-gencp = { version = "0.2.0", path = "../viva-gencp" }
