[package]
name = "viva-genapi-xml"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "GenICam XML retrieval and minimal parsing (schema, features)"
readme = "README.md"
keywords = ["genicam", "genapi", "xml", "vision"]
categories = ["hardware-support", "network-programming", "science::robotics"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["fetch"]
fetch = []

[dependencies]
quick-xml = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
