[package]
name = "viva-genapi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "In-memory GenApi node map, evaluation, and feature access helpers"
readme = "README.md"
keywords = ["genicam", "genapi", "vision", "camera"]
categories = ["hardware-support", "science::robotics"]


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
viva-genapi-xml = { version = "0.2.0", path = "../viva-genapi-xml" }
