[package]
name = "viva-gencp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Transport-agnostic GenCP encode/decode and status mapping"
readme = "README.md"
keywords = ["genicam", "vision", "gencp", "protocol"]
categories = ["hardware-support", "network-programming", "science::robotics"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bytes = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
