[package]
name = "viva-genicam"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "High-level GenICam facade: discovery, control, streaming, events"
readme = "README.md"
keywords = ["genicam", "vision", "gige", "camera"]
categories = ["hardware-support", "network-programming", "science::robotics"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
viva-genapi = { version = "0.2", path = "../viva-genapi" }
viva-genapi-xml = { version = "0.2", path = "../viva-genapi-xml" }
thiserror = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync", "time"] }
tracing = { workspace = true }
viva-gige = { version = "0.2", path = "../viva-gige" }
async-trait = { workspace = true }
viva-sfnc = { version = "0.2", path = "../viva-sfnc" }
viva-pfnc = { version = "0.2", path = "../viva-pfnc" }
viva-gencp = { version = "0.2", path = "../viva-gencp" }
viva-u3v = { version = "0.2", path = "../viva-u3v", optional = true }

[features]
default = []
u3v = ["viva-u3v"]
u3v-usb = ["u3v", "viva-u3v/usb"]

[dev-dependencies]
viva-genapi-xml = { version = "0.2", path = "../viva-genapi-xml" }
viva-fake-gige = { path = "../viva-fake-gige" }
viva-fake-u3v = { path = "../viva-fake-u3v" }
viva-u3v = { version = "0.2", path = "../viva-u3v" }
fastrand = "2"
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Enable Tokio's signal support for examples like `soak_bench`.
tokio = { workspace = true, features = ["signal"] }
