[package]
name = "viva-pfnc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Pixel Format Naming Convention (PFNC) tables and helpers"
readme = "README.md"
keywords = ["genicam", "pfnc", "vision", "image"]
categories = ["hardware-support", "science::robotics"]


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde"]
