[package]
name = "viva-service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Zenoh bridge exposing GenICam cameras as network-accessible services"
readme = "README.md"
keywords = ["genicam", "zenoh", "vision", "camera", "gige"]
categories = ["hardware-support", "network-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "viva_service"
path = "src/lib.rs"

[[bin]]
name = "viva-service"
path = "src/main.rs"

[dependencies]
viva-genicam = { version = "0.2.0", path = "../viva-genicam" }
viva-zenoh-api = { version = "0.2.0", path = "../viva-zenoh-api" }
zenoh = "1"
tokio = { workspace = true, features = ["macros", "signal"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
async-trait = { workspace = true }

[dev-dependencies]
viva-fake-gige = { path = "../viva-fake-gige" }
