[package]
name = "viva-sfnc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Standard Feature Naming Convention (SFNC) descriptors for GenICam"
readme = "README.md"
keywords = ["genicam", "sfnc", "vision", "camera"]
categories = ["hardware-support", "science::robotics"]


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
