[package]
name = "viva-u3v"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
rusb = { workspace = true, optional = true }

[features]
default = []
async = ["tokio"]
usb = ["rusb"]
