[package]
name = "viva-u3v"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
viva-gencp = { version = "0.1.0", path = "../viva-gencp" }
rusb = { workspace = true, optional = true }

[features]
default = []
usb = ["rusb"]
