[package]
name = "viva-u3v"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "USB3 Vision transport: bootstrap registers, GenCP-over-USB, and bulk streaming"
readme = "README.md"
keywords = ["genicam", "u3v", "usb", "vision"]
categories = ["hardware-support", "science::robotics"]

[dependencies]
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
viva-gencp = { version = "0.1.0", path = "../viva-gencp" }
rusb = { workspace = true, optional = true }
zip = { version = "2", default-features = false, features = ["deflate"] }

[features]
default = []
usb = ["rusb"]
