[package]
name = "viva-zenoh-api"
version = "0.1.0"
edition = "2021"
description = "Shared Zenoh API payload types for GenICam camera services (no Zenoh dependency)"
license = "MIT"
repository = "https://github.com/VitalyVorobyev/genicam-rs"
readme = "README.md"
keywords = ["genicam", "zenoh", "vision", "camera"]
categories = ["hardware-support", "network-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
