[package]
name = "viva-zenoh-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Shared Zenoh API payload types for GenICam camera services (no Zenoh dependency)"
readme = "README.md"
keywords = ["genicam", "zenoh", "vision", "camera"]
categories = ["hardware-support", "network-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
